--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <configuration>
-                    <failIfNoTests>true</failIfNoTests>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <failIfNoTests>true</failIfNoTests>-->
+<!--                </configuration>-->
             </plugin>
 
             <plugin>
@@ -44,27 +44,27 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <execution>
-                        <id>jacoco-check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
+<!--                    <execution>-->
+<!--                        <id>jacoco-check</id>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
                 </executions>
-                <!--                <configuration>-->
-                <!--                    <rules>-->
-                <!--                        <rule>-->
-                <!--                            <element>CLASS</element>-->
-                <!--                            <limits>-->
-                <!--                                <limit>-->
-                <!--                                    <counter>BRANCH</counter>-->
-                <!--                                    <value>COVEREDRATIO</value>-->
-                <!--                                    <minimum>1.00</minimum>-->
-                <!--                                </limit>-->
-                <!--                            </limits>-->
-                <!--                        </rule>-->
-                <!--                    </rules>-->
-                <!--                </configuration>-->
+                                <configuration>
+                                    <rules>
+                                        <rule>
+                                            <element>CLASS</element>
+                                            <limits>
+                                                <limit>
+                                                    <counter>BRANCH</counter>
+                                                    <value>COVEREDRATIO</value>
+                                                    <minimum>1.00</minimum>
+                                                </limit>
+                                            </limits>
+                                        </rule>
+                                    </rules>
+                                </configuration>
             </plugin>
         </plugins>
 
